--- a/snodas-ui/snodas.html
+++ b/snodas-ui/snodas.html
@@ -13,7 +13,7 @@
     <meta name="theme-color" content="#000000">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>NWCC eBAGIS -- AOI Browser</title>
+    <title>NWCC eBAGIS -- SNODAS Tool</title>
 
 
 
@@ -33,7 +33,7 @@
     <link rel="apple-touch-icon" sizes="120x120" href="assets/img/favicon-120.png">
     <link rel="apple-touch-icon" sizes="152x152" href="assets/img/favicon-152.png">
     <link rel="icon" sizes="196x196" href="assets/img/favicon-196.png"-->
-    <link rel="icon" type="image/x-icon" href="/static/ebagis_ui/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
   </head>
 
   <body>
@@ -62,23 +62,12 @@
 
 
       <li class="nav-item nav-icon ">
-        <a class="nav-link" href=/about/><i class="fas fa-info-circle" aria-hidden="true"></i> About</a>
+        <a class="nav-link" href=./about.html><i class="fas fa-info-circle" aria-hidden="true"></i> About</a>
       </li>
 
       <li class="nav-item nav-icon">
         <a class="nav-link" target="_blank" href="http://webservices.geog.pdx.edu/ebagis/"><i class="fas fa-question-circle" aria-hidden="true"></i> Help</a>
       </li>
-    </ul>
-
-    <ul class="nav navbar-nav floadt-xs-right">
-
-        <li class="nav-item nav-icon">
-          <a class="nav-link" href=/accounts/signup/><i class="fas fa-user-plus" aria-hidden="true"></i> Sign Up</a>
-        </li>
-        <li class="nav-item nav-icon">
-          <a class="nav-link" href=/accounts/login/><i class="fas fa-user-circle" aria-hidden="true"></i> Sign In</a>
-        </li>
-
     </ul>
   </div>
 </nav>
