issue #4: Changes to support static page; Set STATIC_DIRS to new snodas-ui directory

--- a/snodas-ui/about.html
+++ b/snodas-ui/about.html
@@ -13,7 +13,7 @@
     <meta name="theme-color" content="#000000">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>NWCC eBAGIS -- About the Project</title>
+    <title>NWCC SNODAS -- About the Project</title>
 
 
 
@@ -42,14 +42,9 @@
   </button>
 
 
-  <a class="navbar-brand" href=/><i class="fas fa-globe-americas" aria-hidden="true"></i> NWCC eBagis</a>
+  <a class="navbar-brand" href=/><i class="fas fa-globe-americas" aria-hidden="true"></i> NWCC SNODAS</a>
   <div class="collapse navbar-collapse" id="navbarCollapse">
     <ul class="navbar-nav mr-auto">
-
-      <li class="nav-item nav-icon ">
-        <a class="nav-link" href=/><i class="fas fa-map-marked-alt" aria-hidden="true"></i> AOI Browser</a>
-      </li>
-
 
       <li class="nav-item nav-icon ">
         <a class="nav-link" href=./snodas.html><i class="fas fa-snowflake" aria-hidden="true"></i> SNODAS Tools</a>
