--- a/snodas-ui/snodas.html
+++ b/snodas-ui/snodas.html
@@ -13,7 +13,7 @@
     <meta name="theme-color" content="#000000">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>NWCC eBAGIS -- SNODAS Tool</title>
+    <title>NWCC -- SNODAS Tool</title>
 
 
 
@@ -47,17 +47,11 @@
   </button>
 
 
-  <a class="navbar-brand" href=/><i class="fas fa-globe-americas" aria-hidden="true"></i> NWCC eBagis</a>
+  <a class="navbar-brand" href=/><i class="fas fa-globe-americas" aria-hidden="true"></i> NWCC SNODAS</a>
   <div class="collapse navbar-collapse" id="navbarCollapse">
     <ul class="navbar-nav mr-auto">
-
-      <li class="nav-item nav-icon ">
-        <a class="nav-link" href=/><i class="fas fa-map-marked-alt" aria-hidden="true"></i> AOI Browser</a>
-      </li>
-
-
       <li class="nav-item nav-icon active">
-        <a class="nav-link" href=/snodas/><i class="fas fa-snowflake" aria-hidden="true"></i> SNODAS Tools</a>
+        <a class="nav-link" href=./snodas.html><i class="fas fa-snowflake" aria-hidden="true"></i> SNODAS Tools</a>
       </li>
 
 
@@ -166,7 +160,7 @@
 <script src="./leaflet-groupedlayercontrol/leaflet.groupedlayercontrol.js"></script>
 <!--script src="/static/ebagis_ui/js/Leaflet.VectorGrid.bundled.js"></script-->
 <script src="./js/snodas_map.js"></script>
-    <script src="./js/aoi_map.js"></script>
+
 
 
 
